--- a/.github/workflows/run_pyszz.yaml
+++ b/.github/workflows/run_pyszz.yaml
@@ -18,7 +18,7 @@ jobs:
     - name: List JSON files
       id: list-json-files
       run: |
-        files=$(ls json/raw_data/toBeProcessed*.json | jq -R -s -c 'split("\n")[:-1]')
+        files=$(ls json/toBeProcessed*.json | jq -R -s -c 'split("\n")[:-1]')
         echo files=$files
         echo "json_files=$files" >> $GITHUB_OUTPUT
 
