--- a/.github/workflows/run_pyszz.yaml
+++ b/.github/workflows/run_pyszz.yaml
@@ -66,12 +66,12 @@ jobs:
         filename=$(basename ${{ matrix.file }})
         mkdir -p ../json/processed_data/
         cp out/bics.json ../json/processed_data/$filename
-  
-    - name: Commit and push
+
+    - name: Git Operations
       run: |
         git config --global user.email "thiagogquinto.dev@gmail.com"
         git config --global user.name "Thiago Quinto"
-        git pull 
+        git pull origin main
         git add json/processed_data/*.json
         git commit -m "Add bics files"
         git push
