--- a/.github/workflows/run_pd.yaml
+++ b/.github/workflows/run_pd.yaml
@@ -45,6 +45,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pydriller
+        pip install requests
 
     - name: Run PyDriller
       run: |
