--- a/.github/workflows/run_pd.yaml
+++ b/.github/workflows/run_pd.yaml
@@ -60,6 +60,6 @@ jobs:
         git config --global user.email "thiagogquinto.dev@gmail.com"
         git config --global user.name "Thiago Quinto"
         git pull 
-        git add .
+        git add json/processed/*.json
         git commit -m "Add bics by PyDriller"
         git push
