--- a/.github/workflows/get_fix_commits.yaml
+++ b/.github/workflows/get_fix_commits.yaml
@@ -37,6 +37,10 @@ jobs:
       with:
         python-version: '3.x'
 
+    - name: Set Permissions
+      run: |
+        chmod -R 777 . 
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
