--- a/.github/workflows/get_fix_commits.yaml
+++ b/.github/workflows/get_fix_commits.yaml
@@ -5,29 +5,7 @@ on:
       
 jobs:
 
-  list-json-files:
-    runs-on: ubuntu-latest
-
-    outputs:
-      json_files: ${{ steps.list-json-files.outputs.json_files }}
-    
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v4.1.6
-
-    - name: List JSON files
-      id: list-json-files
-      run: |
-        files=$(ls json/raw_data_v1/*.json | jq -R -s -c 'split("\n")[:-1]')
-        echo "json_files=$files" >> $GITHUB_OUTPUT
-
   run-script:
-    needs: list-json-files
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        file: ${{fromJson(needs.list-json-files.outputs.json_files)}}
-
     steps:
     - name: Checkout
       uses: actions/checkout@v4.1.6
@@ -37,30 +15,21 @@ jobs:
       with:
         python-version: '3.x'
 
-    - name: Set Permissions
-      run: |
-        chmod -R 777 . 
-
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install pydriller
         pip install requests
 
-    - name: Show File Name
-      run: |
-        echo "$(basename ${{ matrix.file }})"
-
     - name: Get Fix Commits
       run: |
-        python get_fix_commits.py ${{ matrix.file }}
+        python get_fix_commits.py
 
     - name: Commit and push
       run: |
-        file = "$(basename ${{ matrix.file }})" 
         git config --global user.email "thiagogquinto.dev@gmail.com"
         git config --global user.name "Thiago Quinto"
         git pull 
-        git add json/with_fix_commits/$file
+        git add json/with_fix_commits/*.json
         git commit -m "Get Fix Commits"
         git push
