--- a/.github/workflows/get_fix_commits.yaml
+++ b/.github/workflows/get_fix_commits.yaml
@@ -23,6 +23,10 @@ jobs:
         pip install requests
 
     - name: Get Fix Commits
+      env:
+        TOKEN_1: ${{ secrets.TOKEN_1 }}
+        TOKEN_2: ${{ secrets.TOKEN_2 }}
+        TOKEN_3: ${{ secrets.TOKEN_3 }}
       run: |
         python get_fix_commits.py
 
