--- a/.github/workflows/get_fix_commits.yaml
+++ b/.github/workflows/get_fix_commits.yaml
@@ -5,8 +5,29 @@ on:
       
 jobs:
 
-  run-script:
+  list-json-files:
     runs-on: ubuntu-latest
+
+    outputs:
+      json_files: ${{ steps.list-json-files.outputs.json_files }}
+    
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4.1.6
+
+    - name: List JSON files
+      id: list-json-files
+      run: |
+        files=$(ls json/raw_data/*.json | jq -R -s -c 'split("\n")[:-1]')
+        echo "json_files=$files" >> $GITHUB_OUTPUT
+
+  run-script:
+    needs: list-json-files
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        file: ${{fromJson(needs.list-json-files.outputs.json_files)}}
+
     steps:
     - name: Checkout
       uses: actions/checkout@v4.1.6
@@ -28,8 +49,8 @@ jobs:
         TOKEN_2: ${{ secrets.TOKEN_2 }}
         TOKEN_3: ${{ secrets.TOKEN_3 }}
       run: |
-        python get_fix_commits.py
-
+        python get_fix_commits.py ${{ matrix.file }}
+        
     - name: Commit and push
       run: |
         git config --global user.email "thiagogquinto.dev@gmail.com"
