--- a/.github/workflows/get_fix_commits.yaml
+++ b/.github/workflows/get_fix_commits.yaml
@@ -53,7 +53,7 @@ jobs:
 
     - name: Remover Raw Data File
       run: |
-        rm ${{ matrix.file }}
+        git rm ${{ matrix.file }}
         
     - name: Commit and push
       run: |
