--- a/json/with_fix_commits/zephyrproject-rtos_zephyr.json
+++ b/json/with_fix_commits/zephyrproject-rtos_zephyr.json
@@ -2,84 +2,108 @@
     {
         "repo_name": "zephyrproject-rtos/zephyr",
         "Target PR": "https://github.com/zephyrproject-rtos/zephyr/pull/24065",
+        "Target Commit SHA": "4c5eabfa921a55193e890f89dcb74d2db4d8e22a",
         "Closest PR": "https://github.com/zephyrproject-rtos/zephyr/pull/33997",
+        "Closest Commit SHA": "f6f951cc1709a23fa0a6e4d74337667f90a03af1",
         "Title": "Guideline: Fix violations for rule 10.4",
         "Created At": "2021-04-03T06:13:59Z"
     },
     {
         "repo_name": "zephyrproject-rtos/zephyr",
         "Target PR": "https://github.com/zephyrproject-rtos/zephyr/pull/27865",
+        "Target Commit SHA": "9974a2a76afe765c5c9652e58b76580a75f1dacd",
         "Closest PR": "https://github.com/zephyrproject-rtos/zephyr/pull/38079",
+        "Closest Commit SHA": null,
         "Title": "manifest: update SOF module",
         "Created At": "2021-08-27T22:11:12Z"
     },
     {
         "repo_name": "zephyrproject-rtos/zephyr",
         "Target PR": "https://github.com/zephyrproject-rtos/zephyr/pull/23190",
+        "Target Commit SHA": "105849cf38bf8e1ac9e2bcdca559f5da1b4c0034",
         "Closest PR": "https://github.com/zephyrproject-rtos/zephyr/pull/32777",
+        "Closest Commit SHA": "e1d22a0b6117d2f21d456c202b2feb711b5f54ff",
         "Title": "drivers: i2c_ll_stm32_v2: Add timeout on transfer",
         "Created At": "2021-03-02T11:18:03Z"
     },
     {
         "repo_name": "zephyrproject-rtos/zephyr",
         "Target PR": "https://github.com/zephyrproject-rtos/zephyr/pull/23240",
+        "Target Commit SHA": "23ace0e55681c02a81fb6b891f832aa356c85aab",
         "Closest PR": "https://github.com/zephyrproject-rtos/zephyr/pull/32850",
+        "Closest Commit SHA": null,
         "Title": "checkpatch: Disable \"blank line after declarations\" warning",
         "Created At": "2021-03-03T22:38:35Z"
     },
     {
         "repo_name": "zephyrproject-rtos/zephyr",
         "Target PR": "https://github.com/zephyrproject-rtos/zephyr/pull/23328",
+        "Target Commit SHA": "5f0650b596c54691df35b92d027383396eef457d",
         "Closest PR": "https://github.com/zephyrproject-rtos/zephyr/pull/33098",
+        "Closest Commit SHA": "28c823b16ee2e281f5e805140e584c63530ae58e",
         "Title": "mgmt/osdp: Fix couple of issues identified by coverity",
         "Created At": "2021-03-07T02:19:49Z"
     },
     {
         "repo_name": "zephyrproject-rtos/zephyr",
         "Target PR": "https://github.com/zephyrproject-rtos/zephyr/pull/23457",
+        "Target Commit SHA": "8289dc75dda522b459418ec93f8a91012fdeddb9",
         "Closest PR": "https://github.com/zephyrproject-rtos/zephyr/pull/33310",
+        "Closest Commit SHA": "7f727ac322ab99084c3444bc2546e5777e2e5a3c",
         "Title": "Bluetooth: controller: Fix regression in ctrl tx queue handling",
         "Created At": "2021-03-13T05:38:31Z"
     },
     {
         "repo_name": "zephyrproject-rtos/zephyr",
         "Target PR": "https://github.com/zephyrproject-rtos/zephyr/pull/23649",
+        "Target Commit SHA": "9d3186c43a8ffbfd5e8b25955c10c61b15a50409",
         "Closest PR": "https://github.com/zephyrproject-rtos/zephyr/pull/33514",
+        "Closest Commit SHA": "3a06d3d523d89d07f6fa2131985bced38371ae94",
         "Title": "[Backport v2.4-branch] Bluetooth: L2CAP: Fix missing buffer length check for sdu_len",
         "Created At": "2021-03-19T18:33:16Z"
     },
     {
         "repo_name": "zephyrproject-rtos/zephyr",
         "Target PR": "https://github.com/zephyrproject-rtos/zephyr/pull/23091",
+        "Target Commit SHA": "17e2618f2f75bc9358ae3f694a5fc62949f5702d",
         "Closest PR": "https://github.com/zephyrproject-rtos/zephyr/pull/32658",
+        "Closest Commit SHA": "ae505e97bd30194a005bbbd72dff0844c10a5db5",
         "Title": "tests: thread: thread_api: fix to allow test to run for non-secure",
         "Created At": "2021-02-25T11:16:54Z"
     },
     {
         "repo_name": "zephyrproject-rtos/zephyr",
         "Target PR": "https://github.com/zephyrproject-rtos/zephyr/pull/23308",
+        "Target Commit SHA": "d6d42bef9770a218985700fd430ce5fac6cea36e",
         "Closest PR": "https://github.com/zephyrproject-rtos/zephyr/pull/33006",
+        "Closest Commit SHA": "15d1ea544b02599aa5c1eed61d80092716411f24",
         "Title": "drivers: sensor: bmi160: Fix bug where undersampling is not set",
         "Created At": "2021-03-06T00:16:49Z"
     },
     {
         "repo_name": "zephyrproject-rtos/zephyr",
         "Target PR": "https://github.com/zephyrproject-rtos/zephyr/pull/24954",
+        "Target Commit SHA": "69e8a7b657c6160801a73f4dd40ec29432e2d348",
         "Closest PR": "https://github.com/zephyrproject-rtos/zephyr/pull/34839",
+        "Closest Commit SHA": "5af20cd2586ef02d41bb4aa53ea9c3f82da87779",
         "Title": "modem: hl7800: Fix crash related to IPv6 address",
         "Created At": "2021-05-04T17:00:27Z"
     },
     {
         "repo_name": "zephyrproject-rtos/zephyr",
         "Target PR": "https://github.com/zephyrproject-rtos/zephyr/pull/27891",
+        "Target Commit SHA": null,
         "Closest PR": "https://github.com/zephyrproject-rtos/zephyr/pull/38148",
+        "Closest Commit SHA": "21c6ca9487e0f77fb55412945a926b5c235b9f6d",
         "Title": "drivers: sensor: clean up zephyr_library calls, again",
         "Created At": "2021-08-30T18:11:40Z"
     },
     {
         "repo_name": "zephyrproject-rtos/zephyr",
         "Target PR": "https://github.com/zephyrproject-rtos/zephyr/pull/13260",
+        "Target Commit SHA": "cd59e3f32a999221de35a47458db40bc44a29874",
         "Closest PR": "https://github.com/zephyrproject-rtos/zephyr/pull/13261",
+        "Closest Commit SHA": "3a879deeccce1ab0c0fec74be0ad3c10791836a2",
         "Title": "shell: Fix prompt length not updated in shell_prompt_change",
         "Created At": ""
     }
