--- a/.github/workflows/get_fix_commits.yaml
+++ b/.github/workflows/get_fix_commits.yaml
@@ -51,9 +51,10 @@ jobs:
       run: |
         python get_fix_commits.py ${{ matrix.file }}
 
-    - name: Remover Raw Data File
-      run: |
-        git rm ${{ matrix.file }}
+    # - name: Remover Raw Data File
+    #   run: |
+    #     git rm ${{ matrix.file }}
+    #     git add json/raw_data/*.json
         
     - name: Commit and push
       run: |
@@ -61,6 +62,5 @@ jobs:
         git config --global user.name "Thiago Quinto"
         git pull 
         git add json/with_fix_commits/*.json
-        git add json/raw_data/*.json
         git commit -m "Get Fix Commits"
         git push
