--- a/json/raw_data/projectdiscovery_interactsh.json
+++ b/json/raw_data/projectdiscovery_interactsh.json
@@ -2,7 +2,8 @@
     {
         "repo_name": "projectdiscovery/interactsh",
         "Target PR": "https://github.com/projectdiscovery/interactsh/pull/155",
-        "Closest PR": "https://github.com/projectdiscovery/interactsh/pull/425,chore(deps): bump goreleaser/goreleaser-action from 3 to 4",
+        "Closest PR": "https://github.com/projectdiscovery/interactsh/pull/425",
+        "Title": "chore(deps): bump goreleaser/goreleaser-action from 3 to 4",
         "Created At": "2022-12-19T01:35:18Z"
     }
 ]
