--- a/.github/workflows/run_pyszz.yaml
+++ b/.github/workflows/run_pyszz.yaml
@@ -67,11 +67,16 @@ jobs:
         mkdir -p ../json/processed_data/
         cp out/bics.json ../json/processed_data/$filename
 
+    - name: Remove JSON files
+      run: |
+        git rm ${{ matrix.file }}
+
     - name: Git Operations
       run: |
         git config --global user.email "thiagogquinto.dev@gmail.com"
         git config --global user.name "Thiago Quinto"
         git pull origin main
         git add json/processed_data/*.json
+        git add json/raw_data/*.json
         git commit -m "Add bics files"
         git push
