--- a/.github/workflows/run_pyszz.yaml
+++ b/.github/workflows/run_pyszz.yaml
@@ -70,7 +70,7 @@ jobs:
     # - name: Remove JSON files
     #   run: |
     #     git rm ${{ matrix.file }}
-        # git commit -m "Add bics files"
+        # git add json/raw_data/*.json
 
     - name: Git Operations
       run: |
@@ -78,5 +78,5 @@ jobs:
         git config --global user.name "Thiago Quinto"
         git pull origin main
         git add json/processed_data/*.json
-        git add json/raw_data/*.json
+        git commit -m "Add bics files"
         git push
