--- a/.github/workflows/run_pd.yaml
+++ b/.github/workflows/run_pd.yaml
@@ -54,6 +54,10 @@ jobs:
     - name: Delete PySzz folder
       run: |
         rm -rf pyszz_v2
+    
+    - name: Remove JSON
+      run: |
+        git rm ${{ matrix.file }}
 
     - name: Commit and push
       run: |
@@ -61,5 +65,6 @@ jobs:
         git config --global user.name "Thiago Quinto"
         git pull 
         git add json/final_processed/*.json
+        git add json/processed_data/*.json
         git commit -m "Add bics by PyDriller"
         git push
