--- a/json/final_processed/appneta_tcpreplay.json
+++ b/json/final_processed/appneta_tcpreplay.json
@@ -8,6 +8,10 @@
         "Target Commit SHA": null,
         "target_inducing_commit_hash_pyszz": "-",
         "Closest Commit SHA": "342d29d9e42898b1e097a9f9a31fe0ad15d2f43b",
-        "closest_inducing_commit_hash_pyszz": "-"
+        "closest_inducing_commit_hash_pyszz": "-",
+        "target_inducing_commit_hash_pd": [],
+        "target_matched": [],
+        "closest_inducing_commit_hash_pd": [],
+        "closest_matched": []
     }
 ]
