--- a/json/final_processed/glpi-project_glpi.json
+++ b/json/final_processed/glpi-project_glpi.json
@@ -12,6 +12,20 @@
         "Closest Commit SHA": "5e1c52c5e8a30ceb4e9572964da7ed89ddfb1aaf",
         "closest_inducing_commit_hash_pyszz": [
             "7ccdd6af2b2fe6e22485bf03802c0b0a9c90b214"
+        ],
+        "target_inducing_commit_hash_pd": [
+            "5b2033cf7d6891682d8970af618e136bf2c59fef"
+        ],
+        "target_matched": [],
+        "closest_inducing_commit_hash_pd": [
+            "5b2033cf7d6891682d8970af618e136bf2c59fef",
+            "7ccdd6af2b2fe6e22485bf03802c0b0a9c90b214",
+            "fab197287fad051eaae9a9400a3571577581bd49",
+            "545f331fe6f758a1771a2a7b75d6f61e9240387d",
+            "b23b428772ca017a1134a6f9ff5cbcac821e6544"
+        ],
+        "closest_matched": [
+            "7ccdd6af2b2fe6e22485bf03802c0b0a9c90b214"
         ]
     }
 ]
