Add bics by PyDriller

--- a/json/final_processed/openmrs_openmrs-module-appointmentscheduling.json
+++ b/json/final_processed/openmrs_openmrs-module-appointmentscheduling.json
@@ -12,6 +12,14 @@
         "Closest Commit SHA": "2ccbe39c020809765de41eeb8ee4c70b5ec49cc8",
         "closest_inducing_commit_hash_pyszz": [
             "b1b0038e8c6d759bd7c82649203e244a6ada6490"
+        ],
+        "target_inducing_commit_hash_pd": [],
+        "target_matched": [],
+        "closest_inducing_commit_hash_pd": [
+            "b1b0038e8c6d759bd7c82649203e244a6ada6490"
+        ],
+        "closest_matched": [
+            "b1b0038e8c6d759bd7c82649203e244a6ada6490"
         ]
     }
 ]
