Add bics by PyDriller

--- a/json/final_processed/wazuh_wazuh-kibana-app.json
+++ b/json/final_processed/wazuh_wazuh-kibana-app.json
@@ -12,6 +12,16 @@
         "Closest Commit SHA": "fd5dcaec03bdc55a96fd1a50eef4b44e9e85ae5f",
         "closest_inducing_commit_hash_pyszz": [
             "870d52200e9cdcfbe91ad171891ff5f9130102a7"
+        ],
+        "target_inducing_commit_hash_pd": [
+            "665ecc49d301c83941ec5fd57655ec326a3f6b57"
+        ],
+        "target_matched": [],
+        "closest_inducing_commit_hash_pd": [
+            "870d52200e9cdcfbe91ad171891ff5f9130102a7"
+        ],
+        "closest_matched": [
+            "870d52200e9cdcfbe91ad171891ff5f9130102a7"
         ]
     }
 ]
