--- a/.github/workflows/run_pd.yaml
+++ b/.github/workflows/run_pd.yaml
@@ -55,9 +55,10 @@ jobs:
       run: |
         rm -rf pyszz_v2
     
-    - name: Remove JSON
-      run: |
-        git rm ${{ matrix.file }}
+    # - name: Remove JSON
+    #   run: |
+    #     git rm ${{ matrix.file }}
+        # git add json/processed_data/*.json
 
     - name: Commit and push
       run: |
@@ -65,6 +66,5 @@ jobs:
         git config --global user.name "Thiago Quinto"
         git pull 
         git add json/final_processed/*.json
-        git add json/processed_data/*.json
         git commit -m "Add bics by PyDriller"
         git push
