--- a/json/final_processed/apple_swift.json
+++ b/json/final_processed/apple_swift.json
@@ -8,7 +8,11 @@
         "Target Commit SHA": "16c01fedea18752723161ea905e53db3afa53fd3",
         "target_inducing_commit_hash_pyszz": "-",
         "Closest Commit SHA": "a0369c58130d311c3a4ece71befce71720f46cf6",
-        "closest_inducing_commit_hash_pyszz": "-"
+        "closest_inducing_commit_hash_pyszz": "-",
+        "target_inducing_commit_hash_pd": [],
+        "target_matched": [],
+        "closest_inducing_commit_hash_pd": [],
+        "closest_matched": []
     },
     {
         "repo_name": "apple/swift",
@@ -19,7 +23,11 @@
         "Target Commit SHA": "ef149d5c86234d9a530148ea5580cc8c19bbfb60",
         "target_inducing_commit_hash_pyszz": "-",
         "Closest Commit SHA": "a9290166d8396beb2c5bbfb05dc49835bfe581cc",
-        "closest_inducing_commit_hash_pyszz": "-"
+        "closest_inducing_commit_hash_pyszz": "-",
+        "target_inducing_commit_hash_pd": [],
+        "target_matched": [],
+        "closest_inducing_commit_hash_pd": [],
+        "closest_matched": []
     },
     {
         "repo_name": "apple/swift",
@@ -30,7 +38,11 @@
         "Target Commit SHA": null,
         "target_inducing_commit_hash_pyszz": "-",
         "Closest Commit SHA": "68eb340a2b7690f3770004c6000d6d8d254829f1",
-        "closest_inducing_commit_hash_pyszz": "-"
+        "closest_inducing_commit_hash_pyszz": "-",
+        "target_inducing_commit_hash_pd": [],
+        "target_matched": [],
+        "closest_inducing_commit_hash_pd": [],
+        "closest_matched": []
     },
     {
         "repo_name": "apple/swift",
@@ -41,7 +53,11 @@
         "Target Commit SHA": "a99221bfded64ffdea1aa18931e29d87708093d9",
         "target_inducing_commit_hash_pyszz": "-",
         "Closest Commit SHA": "a24a43928a7aca94a8071ab38c0f13b725be26f9",
-        "closest_inducing_commit_hash_pyszz": "-"
+        "closest_inducing_commit_hash_pyszz": "-",
+        "target_inducing_commit_hash_pd": [],
+        "target_matched": [],
+        "closest_inducing_commit_hash_pd": [],
+        "closest_matched": []
     },
     {
         "repo_name": "apple/swift",
@@ -52,6 +68,10 @@
         "Target Commit SHA": null,
         "target_inducing_commit_hash_pyszz": "-",
         "Closest Commit SHA": "12dd83db4fa1ba57917e7c797c390e3349dda8ff",
-        "closest_inducing_commit_hash_pyszz": "-"
+        "closest_inducing_commit_hash_pyszz": "-",
+        "target_inducing_commit_hash_pd": [],
+        "target_matched": [],
+        "closest_inducing_commit_hash_pd": [],
+        "closest_matched": []
     }
 ]
