--- a/json/final_processed/zephyrproject-rtos_zephyr.json
+++ b/json/final_processed/zephyrproject-rtos_zephyr.json
@@ -12,6 +12,18 @@
         "Closest Commit SHA": "e11ff7df48bce7c98b05ff1626448cd8ab3d82c0",
         "closest_inducing_commit_hash_pyszz": [
             "e06bac0e4f2537ec1547c1c2cca80d5f25fdf0a3"
+        ],
+        "target_inducing_commit_hash_pd": [
+            "385000e8d94f2a2caed91518b6c4e447fc50ff33"
+        ],
+        "target_matched": [
+            "385000e8d94f2a2caed91518b6c4e447fc50ff33"
+        ],
+        "closest_inducing_commit_hash_pd": [
+            "e06bac0e4f2537ec1547c1c2cca80d5f25fdf0a3"
+        ],
+        "closest_matched": [
+            "e06bac0e4f2537ec1547c1c2cca80d5f25fdf0a3"
         ]
     },
     {
@@ -24,6 +36,14 @@
         "target_inducing_commit_hash_pyszz": "-",
         "Closest Commit SHA": "8aa4164518b09cb030502571c01605a7f832fcd6",
         "closest_inducing_commit_hash_pyszz": [
+            "06ef0ca0fc666fdc45399d614b0438e3e28505c3"
+        ],
+        "target_inducing_commit_hash_pd": [],
+        "target_matched": [],
+        "closest_inducing_commit_hash_pd": [
+            "06ef0ca0fc666fdc45399d614b0438e3e28505c3"
+        ],
+        "closest_matched": [
             "06ef0ca0fc666fdc45399d614b0438e3e28505c3"
         ]
     },
@@ -38,6 +58,14 @@
             "85f16efbebf0fc023dd21f0f858630db95e4e7cd"
         ],
         "Closest Commit SHA": "5b0ff0b35b10d645a0206176a6b43b8ae04e0eda",
-        "closest_inducing_commit_hash_pyszz": []
+        "closest_inducing_commit_hash_pyszz": [],
+        "target_inducing_commit_hash_pd": [
+            "85f16efbebf0fc023dd21f0f858630db95e4e7cd"
+        ],
+        "target_matched": [
+            "85f16efbebf0fc023dd21f0f858630db95e4e7cd"
+        ],
+        "closest_inducing_commit_hash_pd": [],
+        "closest_matched": []
     }
 ]
