Add bics by PyDriller

--- a/json/final_processed/vercel_next.json
+++ b/json/final_processed/vercel_next.json
@@ -12,6 +12,19 @@
         "Closest Commit SHA": "eaaa193751f421c19eaaad183831f5450702fe46",
         "closest_inducing_commit_hash_pyszz": [
             "6dbf9c32ec241f7f58104b4ce5790a10f3c54de5"
+        ],
+        "target_inducing_commit_hash_pd": [
+            "0613902dd2d1e9ffe596111a5216f0341c2d839f"
+        ],
+        "target_matched": [],
+        "closest_inducing_commit_hash_pd": [
+            "99d88f2a585618b80058b201f765e66c88e5f5b8",
+            "5d532afa71e4bc1c3d5205cd0804d2c83563a52f",
+            "2e16d02faa04a2ae13caed1f8437cc38bac00fa7",
+            "6dbf9c32ec241f7f58104b4ce5790a10f3c54de5"
+        ],
+        "closest_matched": [
+            "6dbf9c32ec241f7f58104b4ce5790a10f3c54de5"
         ]
     },
     {
@@ -25,7 +38,19 @@
             "e3d298dc621c50db4a74ece68cebd0114d087daf"
         ],
         "Closest Commit SHA": "c1b2b3f91fd8b858e76353a631c7890a95db6875",
-        "closest_inducing_commit_hash_pyszz": "-"
+        "closest_inducing_commit_hash_pyszz": "-",
+        "target_inducing_commit_hash_pd": [
+            "620b426903a8e9418fd9ff4a30415e6a280c5764",
+            "e3d298dc621c50db4a74ece68cebd0114d087daf",
+            "a50a0577d22c05ff1765f2294a35fb4b1d8efcdf",
+            "c0e4b56fdb5ef5d90901c3f2a5c2fadd29d92825",
+            "e35005c214d3cd1a414c0ce99ae25966a0a3f692"
+        ],
+        "target_matched": [
+            "e3d298dc621c50db4a74ece68cebd0114d087daf"
+        ],
+        "closest_inducing_commit_hash_pd": [],
+        "closest_matched": []
     },
     {
         "repo_name": "vercel/next.js",
@@ -39,6 +64,24 @@
         ],
         "Closest Commit SHA": "fcd03091b4bb6e8d1cf0b7e0360f5992b37ebdb8",
         "closest_inducing_commit_hash_pyszz": [
+            "6d7cf2a9345e62ce3c448f6be63d47467a63e49e"
+        ],
+        "target_inducing_commit_hash_pd": [
+            "0ca80875651f1a02bf96ff88a69d87bfe86d422a",
+            "c821e830483c82562b51fa0285ee6d091dc7ba01",
+            "ce8956aedac1f8271bf463009394d841073d11b7",
+            "f204935251aba0914c59d94c09588cf85a8352a0"
+        ],
+        "target_matched": [
+            "ce8956aedac1f8271bf463009394d841073d11b7"
+        ],
+        "closest_inducing_commit_hash_pd": [
+            "3e51ddb8af55b6438aa3aeb382081b9a1c86f325",
+            "6d7cf2a9345e62ce3c448f6be63d47467a63e49e",
+            "7dc50f3867dff1a7ea4f51a8902262cb0e363c9e",
+            "b835e2589d8f038d7650e72017761e14e03a03c6"
+        ],
+        "closest_matched": [
             "6d7cf2a9345e62ce3c448f6be63d47467a63e49e"
         ]
     }
