--- a/json/with_fix_commits/Alfresco_alfresco-android-app.json
+++ b/json/with_fix_commits/Alfresco_alfresco-android-app.json
@@ -5,6 +5,7 @@
         "Problem_Type": "CWE-89",
         "Description": "The Alfresco application before 1.8.7 for Android allows SQL injection in HistorySearchProvider.java.",
         "URL": "https://github.com/Alfresco/alfresco-android-app/pull/547",
+        "Commit SHA": "0b1fb6fceb286f1e888590a2954406eeb0583129",
         "Tag": "['Patch', 'Third Party Advisory']"
     }
 ]
