--- a/json/with_fix_commits/alanxz_rabbitmq-c.json
+++ b/json/with_fix_commits/alanxz_rabbitmq-c.json
@@ -5,6 +5,7 @@
         "Problem_Type": "CWE-522",
         "Description": "An issue was discovered in the C AMQP client library (aka rabbitmq-c) through 0.13.0 for RabbitMQ. Credentials can only be entered on the command line (e.g., for amqp-publish or amqp-consume) and are thus visible to local attackers by listing a process and its arguments.",
         "URL": "https://github.com/alanxz/rabbitmq-c/pull/781",
+        "Commit SHA": "463054383fbeef889b409a7f843df5365288e2a0",
         "Tag": "['Patch']"
     }
 ]
