--- a/json/with_fix_commits/bitovi_launchpad.json
+++ b/json/with_fix_commits/bitovi_launchpad.json
@@ -5,6 +5,7 @@
         "Problem_Type": "CWE-78",
         "Description": "All versions of package launchpad are vulnerable to Command Injection via stop.",
         "URL": "https://github.com/bitovi/launchpad/pull/124",
+        "Commit SHA": "e2f506b5089b1b29d22c80a77ff636b3b1f6e57c",
         "Tag": "['Exploit', 'Patch', 'Third Party Advisory']"
     }
 ]
