--- a/json/with_fix_commits/coralproject_talk.json
+++ b/json/with_fix_commits/coralproject_talk.json
@@ -5,6 +5,7 @@
         "Problem_Type": "CWE-697",
         "Description": "Talk 4 in Coral before 4.12.1 allows remote attackers to discover e-mail addresses and other sensitive information via GraphQL because permission checks use an incorrect data type.",
         "URL": "https://github.com/coralproject/talk/pull/3599",
+        "Commit SHA": "f9bb5857dad411567daf92b3507b69bdddb4b7d9",
         "Tag": "['Patch', 'Third Party Advisory']"
     }
 ]
