--- a/json/with_fix_commits/easybuilders_easybuild-framework.json
+++ b/json/with_fix_commits/easybuilders_easybuild-framework.json
@@ -5,6 +5,7 @@
         "Problem_Type": "CWE-922",
         "Description": "In EasyBuild before version 4.1.2, the GitHub Personal Access Token (PAT) used by EasyBuild for the GitHub integration features (like `--new-pr`, `--fro,-pr`, etc.) is shown in plain text in EasyBuild debug log files. This issue is fixed in EasyBuild v4.1.2, and in the `master`+ `develop` branches of the `easybuild-framework` repository.",
         "URL": "https://github.com/easybuilders/easybuild-framework/pull/3249",
+        "Commit SHA": "bc1d45ba59b961950250734c94527cfbf27c6005",
         "Tag": "['Patch', 'Third Party Advisory']"
     }
 ]
