--- a/json/with_fix_commits/exoplatform_chat-application.json
+++ b/json/with_fix_commits/exoplatform_chat-application.json
@@ -5,6 +5,7 @@
         "Problem_Type": "CWE-79",
         "Description": "A vulnerability classified as problematic has been found in eXo Chat Application. Affected is an unknown function of the file application/src/main/webapp/vue-app/components/ExoChatMessageComposer.vue of the component Mention Handler. The manipulation leads to cross site scripting. It is possible to launch the attack remotely. Upgrading to version 3.3.0-20220417 is able to address this issue. The name of the patch is 26bf307d3658d1403cfd5c3ad423ce4c4d1cb2dc. It is recommended to upgrade the affected component. The identifier of this vulnerability is VDB-220212.",
         "URL": "https://github.com/exoplatform/chat-application/pull/485",
+        "Commit SHA": "26bf307d3658d1403cfd5c3ad423ce4c4d1cb2dc",
         "Tag": "['Patch', 'Third Party Advisory']"
     }
 ]
