--- a/json/with_fix_commits/frostming_rediswrapper.json
+++ b/json/with_fix_commits/frostming_rediswrapper.json
@@ -5,6 +5,7 @@
         "Problem_Type": "CWE-502",
         "Description": "Uncontrolled deserialization of a pickled object in models.py in Frost Ming rediswrapper (aka Redis Wrapper) before 0.3.0 allows attackers to execute arbitrary scripts.",
         "URL": "https://github.com/frostming/rediswrapper/pull/1",
+        "Commit SHA": "748f60bafd857c24f65683426f665350e2c3f91b",
         "Tag": "['Patch', 'Third Party Advisory']"
     }
 ]
