--- a/json/with_fix_commits/trusteddomainproject_OpenDMARC.json
+++ b/json/with_fix_commits/trusteddomainproject_OpenDMARC.json
@@ -5,6 +5,7 @@
         "Problem_Type": "CWE-290",
         "Description": "OpenDMARC through 1.3.2 and 1.4.x through 1.4.0-Beta1 is prone to a signature-bypass vulnerability with multiple From: addresses, which might affect applications that consider a domain name to be relevant to the origin of an e-mail message.",
         "URL": "https://github.com/trusteddomainproject/OpenDMARC/pull/48",
+        "Commit SHA": "ef4083f0d057db48e21e4081142ed511c5f3e060",
         "Tag": "['Patch', 'Third Party Advisory']"
     },
     {
@@ -13,6 +14,7 @@
         "Problem_Type": "CWE-476",
         "Description": "OpenDMARC 1.4.1 and 1.4.1.1 allows remote attackers to cause a denial of service (NULL pointer dereference and application crash) via a multi-value From header field.",
         "URL": "https://github.com/trusteddomainproject/OpenDMARC/pull/178",
+        "Commit SHA": null,
         "Tag": "['Patch', 'Third Party Advisory']"
     }
 ]
