--- a/json/with_fix_commits/tsingsee_EasyPlayerPro-Win.json
+++ b/json/with_fix_commits/tsingsee_EasyPlayerPro-Win.json
@@ -5,6 +5,7 @@
         "Problem_Type": "CWE-787",
         "Description": "A buffer overflow in EasyPlayerPro-Win v3.2.19.0106 to v3.6.19.0823 allows attackers to cause a Denial of Service (DoS) via a crafted XML file.",
         "URL": "https://github.com/tsingsee/EasyPlayerPro-Win/pull/24",
+        "Commit SHA": null,
         "Tag": "['Patch']"
     }
 ]
