--- a/json/with_fix_commits/umbraco_UmbracoIdentityExtensions.json
+++ b/json/with_fix_commits/umbraco_UmbracoIdentityExtensions.json
@@ -5,6 +5,7 @@
         "Problem_Type": "NVD-CWE-noinfo",
         "Description": "UmbracoIdentityExtensions is an Umbraco add-on package that enables easy extensibility points for ASP.Net Identity integration. In affected versions client secrets are not required which may expose some endpoints to untrusted actors. Since Umbraco is not a single-page application, the implicit flow is not safe. For traditional MVC applications, it is recommended to use the authorization code flow, which requires the client to authenticate with the authorization server using a client secret. This flow provides better security, as it involves exchanging an authorization code for an access token and/or ID token, rather than directly returning tokens in the URL fragment. This issue has been patched in commit `e792429f9` and a release to Nuget is pending. Users are advised to upgrade when possible.",
         "URL": "https://github.com/umbraco/UmbracoIdentityExtensions/pull/53",
+        "Commit SHA": "25f46ee530b4d35a4d935cbb8de355be9bc0d2b6",
         "Tag": "['Patch']"
     }
 ]
