--- a/json/with_fix_commits/wazuh_wazuh-kibana-app.json
+++ b/json/with_fix_commits/wazuh_wazuh-kibana-app.json
@@ -5,6 +5,7 @@
         "Problem_Type": "CWE-639",
         "Description": "Wazuh is a security detection, visibility, and compliance open source project. In versions 4.4.0 and 4.4.1, it is possible to get the Wazuh API administrator key used by the Dashboard using the browser development tools. This allows a logged user to the dashboard to become administrator of the API, even if their dashboard role is not. Version 4.4.2 contains a fix. There are no known workarounds.",
         "URL": "https://github.com/wazuh/wazuh-kibana-app/pull/5428",
+        "Commit SHA": "6290e99887fb20f84e2dba21e4f1255d7ad4e69e",
         "Tag": "['Patch']"
     }
 ]
