--- a/json/with_fix_commits/wireapp_wire-webapp.json
+++ b/json/with_fix_commits/wireapp_wire-webapp.json
@@ -5,6 +5,7 @@
         "Problem_Type": "CWE-200",
         "Description": "wire-webapp is an open-source front end for Wire, a secure collaboration platform. In wire-webapp before version 2021-03-15-production.0, when being prompted to enter the app-lock passphrase, the typed passphrase will be sent into the most recently used chat when the user does not actively give focus to the input field. Input element focus is enforced programatically in version 2021-03-15-production.0.",
         "URL": "https://github.com/wireapp/wire-webapp/pull/10704",
+        "Commit SHA": "281f2a9d795f68abe423c116d5da4e1e73a60062",
         "Tag": "['Patch', 'Third Party Advisory']"
     }
 ]
