Get Fix Commits

--- a/json/with_fix_commits/mullvad_mullvadvpn-app.json
+++ b/json/with_fix_commits/mullvad_mullvadvpn-app.json
@@ -5,6 +5,7 @@
         "Problem_Type": "CWE-732",
         "Description": "An issue was discovered in Mullvad VPN Windows app before 2023.6-beta1. Insufficient permissions on a directory allow any local unprivileged user to escalate privileges to SYSTEM.",
         "URL": "https://github.com/mullvad/mullvadvpn-app/pull/5398",
+        "Commit SHA": "e67621953939078ac297375fd584e432e848764c",
         "Tag": "['Patch', 'Vendor Advisory']"
     }
 ]
