--- a/json/with_fix_commits/onnx_onnx.json
+++ b/json/with_fix_commits/onnx_onnx.json
@@ -5,6 +5,7 @@
         "Problem_Type": "CWE-22",
         "Description": "Versions of the package onnx before 1.13.0 are vulnerable to Directory Traversal as the external_data field of the tensor proto can have a path to the file which is outside the model current directory or user-provided directory, for example \"../../../etc/passwd\"",
         "URL": "https://github.com/onnx/onnx/pull/4400",
+        "Commit SHA": "f369b0e859024095d721f1d1612da5a8fa38988d",
         "Tag": "['Patch', 'Third Party Advisory']"
     }
 ]
