--- a/json/with_fix_commits/OnShift_turbogears.json
+++ b/json/with_fix_commits/OnShift_turbogears.json
@@ -5,6 +5,7 @@
         "Problem_Type": "CWE-436",
         "Description": "A vulnerability classified as critical has been found in OnShift TurboGears 1.0.11.10. This affects an unknown part of the file turbogears/controllers.py of the component HTTP Header Handler. The manipulation leads to http response splitting. It is possible to initiate the attack remotely. Upgrading to version 1.0.11.11 is able to address this issue. The patch is named f68bbaba47f4474e1da553aa51564a73e1d92a84. It is recommended to upgrade the affected component. The associated identifier of this vulnerability is VDB-220059.",
         "URL": "https://github.com/OnShift/turbogears/pull/18",
+        "Commit SHA": "2f56206760a94f8c8bbaa5da6648130a9c0f843f",
         "Tag": "['Issue Tracking', 'Patch']"
     }
 ]
